--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t quannm244/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true quannm244/docker-react npm run
+  - docker run -e CI=true quannm244/docker-react npm run test
