--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,16 @@ before_install:
 
 script:
   - docker run -e CI=true quannm244/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-east-1"
+  app: "Docker1"
+  env: "Docker1-env"
+  bucket_name: "elasticbeanstalk-ap-east-1-510587096014"
+  bucket_path: "Docker1"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
