--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ script:
   - docker run -e CI=true quannm244/docker-react npm run test
 
 deploy:
+  edge: true
   provider: elasticbeanstalk
   region: "ap-east-1"
   app: "Docker1"
@@ -18,5 +19,4 @@ deploy:
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
-  secret_access_key:
-    secure: "$AWS_SECRET_KEY"
+  secret_access_key: $AWS_SECRET_KEY
